@@ -1,4 +1,4 @@
-VERSION=0.77.1-20051006
+VERSION=0.77.1-20051104
 THISDIR=branch_0
 
 TOOLSPREFIX=
