@@ -88,6 +88,7 @@ void mpz_mul_si(mpz_t x,mpz_t y,long int z);
   ({ int _s; _s= (s); \
      _s>=0 ? mpz_add_ui(r,o,(unsigned long)(_s)) : mpz_sub_ui(r,o,(unsigned long)(-_s)); })
 
+#ifdef ULL_NO_UL
 void mpz_ull_init();
 void mpz_mul_ull(mpz_t rop,mpz_t op1,uint64_t op2);
 int mpz_fits_sllong_p(mpz_t);
@@ -96,7 +97,16 @@ int64_t mpz_get_sll(mpz_t);
 void mpz_set_sll(mpz_t,int64_t);
 uint64_t mpz_get_ull(mpz_t);
 void mpz_set_ull(mpz_t,uint64_t);
-int mpz_cmp_ull(mpz_t,uint64_t);
+#else
+#define mpz_ull_init()
+#define mpz_mul_ull mpz_mul_ui
+#define mpz_fits_sllong_p mpz_fits_slong_p
+#define mpz_fits_ullong_p mpz_fits_ulong_p
+#define mpz_get_sll mpz_get_si
+#define mpz_set_sll mpz_set_si
+#define mpz_get_ull mpz_get_ui
+#define mpz_set_ull mpz_set_ui
+#endif
 
 void numread(char *arg, unsigned *x);
 
